<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dis_tutorial2</name>
  <version>0.0.1</version>
  <description>DIS tutorial 2 packages - demonstrating basic ROS2 capabilities.</description>
  <maintainer email="matej.dobrevski@fri.uni-lj.si">vicos</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
